SP_Vault_Comp/force-app/main/default/objects/Vault_Workout__c/Vault_Workout__c.object-meta.xml
<CustomObject>
    <label>Vault Workout</label>
    <nameField>
        <label>Vault Workouts Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vault Workouts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>