SP_Vault_Comp/force-app/main/default/objects/Vault_Workout__c/fields/First_Label__c.field-meta.xml
<CustomField>
    <fullName>First_Label__c</fullName>
    <defaultValue>&apos;Mins&apos;</defaultValue>
    <inlineHelpText>Label for the 1st Score Value</inlineHelpText>
    <label>First Label</label>
    <length>36</length>
    <type>Text</type>
</CustomField>