SP_Vault_Comp/force-app/main/default/objects/Vault_Workout__c/fields/Goal__c.field-meta.xml
<CustomField>
    <fullName>Goal__c</fullName>
    <inlineHelpText>Plain Text goal</inlineHelpText>
    <label>Goal</label>
    <length>64</length>
    <type>Text</type>
</CustomField>