SP_Vault_Comp/force-app/main/default/objects/Vault_Workout__c/fields/Goal_Low_Value__c.field-meta.xml
<CustomField>
    <fullName>Goal_Low_Value__c</fullName>
    <inlineHelpText>If it is Time based, the value will be in seconds, otherwise it will be in number of reps</inlineHelpText>
    <label>Goal Low Value</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>