SP_Vault_Comp/force-app/main/default/objects/Vault_Workout__c/fields/Image_File__c.field-meta.xml
<CustomField>
    <fullName>Image_File__c</fullName>
    <formula>Text(Order__c) &amp; &quot;_&quot; &amp; Name &amp; &quot;.jpg&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Image File</label>
    <type>Text</type>
</CustomField>