SP_Vault_Comp/force-app/main/default/objects/Vault_Workout__c/fields/Is_Dumbbell__c.field-meta.xml
<CustomField>
    <fullName>Is_Dumbbell__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Was the Workout designed primarily for Dumbbells?</inlineHelpText>
    <label>Is Dumbbell?</label>
    <type>Checkbox</type>
</CustomField>