SP_Vault_Comp/force-app/main/default/objects/Vault_Workout__c/fields/Is_Goal_Time__c.field-meta.xml
<CustomField>
    <fullName>Is_Goal_Time__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Goal Time?</label>
    <type>Checkbox</type>
</CustomField>