SP_Vault_Comp/force-app/main/default/objects/Vault_Workout__c/fields/Is_Only_Reps__c.field-meta.xml
<CustomField>
    <fullName>Is_Only_Reps__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is the score only reps (ex: max number of burpees in time remaining)</inlineHelpText>
    <label>Is Only Reps?</label>
    <type>Checkbox</type>
</CustomField>