SP_Vault_Comp/force-app/main/default/objects/Vault_Workout__c/fields/Plain_Description__c.field-meta.xml
<CustomField>
    <fullName>Plain_Description__c</fullName>
    <label>Plain Description</label>
    <type>TextArea</type>
</CustomField>