SP_Vault_Comp/force-app/main/default/objects/Vault_Workout__c/fields/Round_Value__c.field-meta.xml
<CustomField>
    <fullName>Round_Value__c</fullName>
    <defaultValue>1</defaultValue>
    <inlineHelpText>If it is Time, Value will be 60 &quot;per round&quot; (Default = 1)</inlineHelpText>
    <label>Round Value</label>
    <precision>8</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>