SP_Vault_Comp/force-app/main/default/objects/Vault_Workout__c/fields/RX_Weight_Male__c.field-meta.xml
<CustomField>
    <fullName>RX_Weight_Male__c</fullName>
    <label>RX Weight (Male)</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>