SP_Vault_Comp/force-app/main/default/objects/Vault_Workout__c/fields/Second_Label__c.field-meta.xml
<CustomField>
    <fullName>Second_Label__c</fullName>
    <defaultValue>&apos;Secs&apos;</defaultValue>
    <inlineHelpText>Label for the 2nd Score Value</inlineHelpText>
    <label>Second Label</label>
    <length>36</length>
    <type>Text</type>
</CustomField>