SP_Vault_Comp/force-app/main/default/objects/Vault_Workout__c/fields/Workout_Date__c.field-meta.xml
<CustomField>
    <fullName>Workout_Date__c</fullName>
    <inlineHelpText>Monday of the Week the workout should be logged</inlineHelpText>
    <label>Workout Date</label>
    <type>Date</type>
</CustomField>